syntax = "proto3";

import "google/protobuf/wrappers.proto";

package com.example.demo.serviceImpl.notificationService;

service NotificationManager {
    rpc sendNotification(stream Notification) returns (stream google.protobuf.BoolValue);
    rpc turnOnNotifications(google.protobuf.Int32Value) returns (google.protobuf.Int32Value);
    rpc turnOffNotifications(google.protobuf.Int32Value) returns (google.protobuf.Int32Value);
}

message Notification {
    int32 id = 1;
    int32 userID = 2;
    string userEmail = 3;
    string subject = 4;
    string msg = 5;
}